--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -7,7 +7,7 @@ server:
   port: 8001
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.mengxuegu.springcloud.entities
+  type-aliases-package: com.demo.springcloud.entities
   mapper-locations: classpath:mybatis/mapper/**/*.xml
 spring:
   profiles: dev # 开发环境
@@ -40,7 +40,7 @@ server:
   port: 8001
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.mengxuegu.springcloud.entities
+  type-aliases-package: com.demo.springcloud.entities
   mapper-locations: classpath:mybatis/mapper/**/*.xml
 spring:
   profiles: prod # 生产环境
