--- a/microservice-config-eureka.yml
+++ b/microservice-config-eureka.yml
@@ -13,12 +13,12 @@ spring:
     
 eureka:
   instance:
-    hostname: eureka6001.com
+    hostname: 192.168.10.11  #  eureka6001.com
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eureka6001.com:6001/eureka/
+      defaultZone: http://${eureka.instance.hostname}:6001/eureka/  # http://eureka6001.com:6001/eureka/
   server:
     enable-self-preservation: false # 禁用自我保护机制*****************
     
